kubernetes/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: backend-namespace
  labels:
    app: backend-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-application
  template:
    metadata:
      name: backend-pod
      labels:
        app: backend-application
    spec:
      containers:
        - name: backend-container
          image: registry.digitalocean.com/collectedview/backend:latest
          imagePullPolicy: Always
          restartPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "180Mi"
              cpu: "300m"
            limits:
              memory: "360Mi"
              cpu: "600m"
