kubernetes/backend/service-secure.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-secure
spec:
  type: NodePort
  selector:
    app: backend-application
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8080
      name: https
